# bench-ann

./: Cargo.toml  README.md  justfile
adapters/ann-bench-hnsw-rs/: Cargo.toml
adapters/ann-bench-instant-distance/: Cargo.toml
adapters/ann-bench-instant-distance/src/: lib.rs
adapters/ann-bench-usearch/: Cargo.toml
ann-bench-cli/: Cargo.toml
ann-bench-cli/src/: main.rs
ann-bench-cli/src/commands/: ground_truth.rs  list.rs  mod.rs  pareto.rs  run.rs  tier.rs
ann-bench-core/: Cargo.toml
ann-bench-core/src/: lib.rs  pareto.rs  results.rs  tiers.rs  trait.rs  types.rs
ann-bench-datasets/: Cargo.toml
ann-bench-datasets/src/: distance.rs  fvecs.rs  ground_truth.rs  lib.rs  synthetic.rs
ann-bench-harness/: Cargo.toml
ann-bench-harness/src/: filtered.rs  incremental.rs  lib.rs  measurement.rs  memory.rs  output.rs  recall.rs  runner.rs
docs/src/: README.md
results/: hnsw_rs_synthetic-128_M=16,ef_c=200.json  hnsw_rs_synthetic-128_M=32,ef_c=200.json  hnsw_rs_synthetic-1536_M=16,ef_c=200.json  hnsw_rs_synthetic-1536_M=32,ef_c=200.json  hnsw_rs_synthetic-384_M=16,ef_c=200.json  hnsw_rs_synthetic-384_M=32,ef_c=200.json  hnsw_rs_synthetic-768_M=16,ef_c=200.json  hnsw_rs_synthetic-768_M=32,ef_c=200.json  instant-distance_synthetic-128_M=32,ef_c=200.json  instant-distance_synthetic-1536_M=32,ef_c=200.json  instant-distance_synthetic-384_M=32,ef_c=200.json  instant-distance_synthetic-768_M=32,ef_c=200.json  usearch_synthetic-128_M=16,ef_c=200.json  usearch_synthetic-128_M=32,ef_c=200.json  usearch_synthetic-1536_M=16,ef_c=200.json  usearch_synthetic-1536_M=32,ef_c=200.json  usearch_synthetic-384_M=16,ef_c=200.json  usearch_synthetic-384_M=32,ef_c=200.json  usearch_synthetic-768_M=16,ef_c=200.json  usearch_synthetic-768_M=32,ef_c=200.json
results/100k/: hnsw_rs_synthetic-128_M=16,ef_c=200.json  hnsw_rs_synthetic-1536_M=16,ef_c=200.json  (+10 more)
scripts/: pareto.py  summary.py
(+36 files in other folders)
