[package]
name = "ann-bench-instant-distance"
version = "0.1.0"
edition = "2021"

[dependencies]
ann-bench-core = { path = "../../ann-bench-core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
instant-distance = { version = "0.6", features = ["with-serde"] }
bincode = "1"

[dev-dependencies]
tempfile = "3"
